# SecRS

./: .gitignore  Cargo.toml  README.md  audit.rs  behavioral_analysis.rs  config.toml  deception_system.rs  encryption.rs  forensic_capture.rs  isolation.rs  main.rs  memory_forensics.rs  ml_threat_detection.rs  mod.rs  monitoring.rs  network_analysis.rs  permissions.rs  response_automation.rs  sandbox.rs  threat_detection.rs  validation.rs
src/: lib.rs  main.rs
src/core/: audit.rs  manager.rs  mod.rs  permissions.rs  validation.rs
src/modules/: behavioral_analysis.rs  encryption.rs  forensic_capture.rs  isolation.rs  ml_threat_detection.rs  mod.rs  monitoring.rs  network_analysis.rs  response_automation.rs  sandbox.rs  threat_detection.rs
src/ui/: app.rs  handler.rs  mod.rs  tui.rs  ui.rs
