[package]
name = "sare-security"
version = "0.1.0"
edition = "2021"

[lib]
name = "sare_security"

[[bin]]
name = "secrs_demo"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
url = "2.0"
toml = "0.8"
rand = "0.8"
base64 = "0.21"
aes-gcm = "0.10"
nix = "0.26"
libc = "0.2"
# Advanced security dependencies
ring = "0.17"
sha2 = "0.10"
hmac = "0.12"
pcap = "1.0"
pnet = "0.34"
rustls = "0.21"
webpki = "0.22"
# Machine learning for threat detection
# rust-bert and tch removed (unused)
# Advanced monitoring
sysinfo = "0.30"
procfs = "0.15"
# Network analysis
pcap-parser = "0.16"
# Memory forensics
memmap2 = "0.9"
# Advanced sandboxing
seccomp = "0.1"
# Network traffic analysis
# TUI dependencies
ratatui = "0.26"
crossterm = "0.27"